# Autopilot-Multiplexing-Algorithm

./: ARSP.xlsx  BAR.xlsx  CMakeLists.txt  GPS.xlsx  IMU.xlsx  MAG.xlsx  README.md  publisher_sensors.cpp  subscriber_sensors.cpp
csv_data/: ARSP.csv  BAR.csv  GPS.csv  IMU.csv  MAG.csv
dsdl_source/: 20987.SensorsData.uavcan  Accelerometer.uavcan  Airspeed.uavcan  Auto2_control.uavcan  Autopilot_1.uavcan  Autopilot_3.uavcan  Barometer.uavcan  GNSS.uavcan  Gyroscope.uavcan  Magnetometer.uavcan  SensorsStatus.uavcan
dsdlc_generated/dsdl_source/: Accelerometer.hpp  Airspeed.hpp  Auto1_control.hpp  Auto2_control.hpp  Auto3_control.hpp  Autopilot_1.hpp  Autopilot_2.hpp  Autopilot_3.hpp  Barometer.hpp  GNSS.hpp  Gyroscope.hpp  Magnetometer.hpp  SensorStatus.hpp  SensorsData.hpp  SensorsStatus.hpp
